--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 body{
-  /*background-color: rgb(11, 95, 229);*/
-  min-height: 667px;
+  min-height: 783px;
   background: rgb(11, 95, 229); /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(blue, lightblue); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(blue, lightblue); /* For Opera 11.1 to 12.0 */
@@ -30,12 +29,12 @@ body{
 
 .all-growls{
   display: block;
-  margin: 5px;
+  border: 1px solid;
 }
 
 .delete-link{
-  float: right;
-  padding-top: 40px;
+  position: absolute;
+  top: 20px;
 }
 
 .header{
@@ -52,6 +51,10 @@ body{
   margin-bottom: -8px;
 }
 
+.growlUl {
+  margin-top: 34px;
+}
+
 .NewTitle{
   display: inline-block;
 }
@@ -59,10 +62,6 @@ body{
 .form-group{
   display: inline-block;
 }
-
-/*.NewGrowlButton{
-  padding-top: 20px;
-}*/
 
 .GrowlButton{
  padding: 15px 30px;
@@ -154,6 +153,7 @@ body{
 
 pre {
   white-space: pre-wrap;
+  word-break: break-word;
   width:525px;
 }
 
@@ -188,27 +188,3 @@ textarea {
 #growlLength {
   padding-right: 10px;
 }
-/*.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}*/
